// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delay autorun until end of transaction 1`] = `
[
  {
    "debugObjectName": "ObservableObject@1",
    "name": "a",
    "newValue": 3,
    "observableKind": "object",
    "oldValue": 2,
    "spyReportStart": true,
    "type": "update",
  },
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  {
    "debugObjectName": "ObservableObject@1",
    "name": "a",
    "newValue": 4,
    "observableKind": "object",
    "oldValue": 3,
    "spyReportStart": true,
    "type": "update",
  },
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "end1",
  {
    "debugObjectName": "ObservableObject@1",
    "name": "a",
    "newValue": 5,
    "observableKind": "object",
    "oldValue": 4,
    "spyReportStart": true,
    "type": "update",
  },
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "end2",
  {
    "name": "test",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  "calc y",
  {
    "debugObjectName": "ObservableObject@1.b",
    "newValue": 5,
    "observableKind": "computed",
    "oldValue": CaughtException {
      "cause": null,
    },
    "type": "update",
  },
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "post trans1",
  {
    "debugObjectName": "ObservableObject@1",
    "name": "a",
    "newValue": 6,
    "observableKind": "object",
    "oldValue": 5,
    "spyReportStart": true,
    "type": "update",
  },
  "calc y",
  {
    "debugObjectName": "ObservableObject@1.b",
    "newValue": 6,
    "observableKind": "computed",
    "oldValue": 5,
    "type": "update",
  },
  {
    "name": "test",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "post trans2",
  {
    "debugObjectName": "ObservableObject@1",
    "name": "a",
    "newValue": 3,
    "observableKind": "object",
    "oldValue": 6,
    "spyReportStart": true,
    "type": "update",
  },
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "post trans3",
]
`;

exports[`issue 50 1`] = `
[
  "auto",
  "calc c",
  "transstart",
  {
    "debugObjectName": "ObservableObject@1",
    "name": "a",
    "newValue": false,
    "observableKind": "object",
    "oldValue": true,
    "spyReportStart": true,
    "type": "update",
  },
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  {
    "debugObjectName": "ObservableObject@1",
    "name": "b",
    "newValue": true,
    "observableKind": "object",
    "oldValue": false,
    "spyReportStart": true,
    "type": "update",
  },
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpreend",
  {
    "name": "ar",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  "calc c",
  {
    "debugObjectName": "ObservableObject@1.c",
    "newValue": true,
    "observableKind": "computed",
    "oldValue": false,
    "type": "update",
  },
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpostend",
]
`;

exports[`verify transaction events 1`] = `
[
  "auto",
  "calc c",
  "transstart",
  {
    "debugObjectName": "ObservableObject@1",
    "name": "b",
    "newValue": 2,
    "observableKind": "object",
    "oldValue": 1,
    "spyReportStart": true,
    "type": "update",
  },
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpreend",
  "calc c",
  {
    "debugObjectName": "ObservableObject@1.c",
    "newValue": 2,
    "observableKind": "computed",
    "oldValue": 1,
    "type": "update",
  },
  {
    "name": "ar",
    "spyReportStart": true,
    "type": "reaction",
  },
  "auto",
  {
    "spyReportEnd": true,
    "type": "report-end",
  },
  "transpostend",
]
`;
